# drf_crud_example

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/users/: serializers.py  urls.py  views.py
hard_train/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
